--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=${DATABASE-URL}
 spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASSWORD}
+server.port=${PORT:8080}
 
 spring.jpa.show-sql=true
 
