--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/cities_db
-spring.datasource.username=postgres
-spring.datasource.password=,53daBogeiD
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.show-sql=true
 
